experimental speed up to diff generation