@@ -56,10 +56,14 @@
 
   :profiles {:dev {:dependencies [[figwheel-sidecar "0.5.16"]
                                   [binaryage/devtools "0.9.7"]
-                                  [cider/piggieback "0.5.2"]]
+                                  [cider/piggieback "0.5.2"]
+                                  [com.clojure-goes-fast/clj-async-profiler "0.5.1"]
+                                  [criterium "0.4.6"]
+                                  [bsless/clj-fast "0.0.10"]]
                    :plugins [[lein-figwheel "0.5.16"]
                              [integrant/repl "0.3.2"]]
-                   :source-paths ["src/clj" "src/cljs" "src/cljc"]}}
+                   :source-paths ["src/clj" "src/cljs" "src/cljc" "test/clj"]
+                   :jvm-opts ["-Djdk.attach.allowAttachSelf"]}}
 
   :aliases {"fetch" ["run" "-m" "tasks.fetch/command"]
             "dumbrepl" ["trampoline" "run" "-m" "clojure.main/main"]
@@ -86,7 +90,6 @@
   :uberjar-exclusions [#"public/img/cards/*"]
   :omit-source true
   :main web.core
-
 
   ;; Misc
   :test-paths ["test/clj"]
